<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Aegis</string>
    <string name="app_name_full" translatable="false">Aegis Authenticator</string>
    <string name="org_name_full" translatable="false">Beem Development</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_delete">Delete</string>
    <string name="action_transfer">Transfer</string>
    <string name="action_edit_icon">Edit icon</string>
    <string name="action_reset_usage_count">Reset usage count</string>
    <string name="action_reset_usage_count_dialog">Are you sure you want to set the usage count of this entry to 0?</string>
    <string name="action_default_icon">Restore default icon</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="all">All</string>
    <string name="issuer">Issuer</string>
    <string name="yandex_pin">PIN (4–16 digits)</string>
    <string name="motp_pin">PIN (4 digits)</string>
    <string name="suggested">Suggested</string>
    <string name="usage_count">Usage count</string>
    <string name="warning">Warning</string>
    <string name="pref_cat_appearance_app">App</string>
    <string name="pref_cat_appearance_entries">Entries</string>
    <string name="pref_cat_backups_android">Android</string>
    <string name="pref_cat_backups_auto">Automatic backups</string>
    <string name="pref_section_behavior_title">Behavior</string>
    <string name="pref_section_behavior_summary">Customize the behavior when interacting with the entry list.</string>
    <string name="pref_section_appearance_title">Appearance</string>
    <string name="pref_section_appearance_summary">Adjust the theme, language and other settings that affect the appearance of the app.</string>
    <string name="pref_section_security_title">Security</string>
    <string name="pref_section_security_summary">Configure encryption, biometric unlock, auto lock and other security settings.</string>
    <string name="pref_section_import_export_title">Import &amp; Export</string>
    <string name="pref_section_import_export_summary">Import backups of Aegis or other authenticator apps. Create manual exports of your Aegis vault.</string>
    <string name="pref_section_audit_log_title">Audit log</string>
    <string name="pref_section_audit_log_summary">Find a list of all reported important events that happened within the app.</string>
    <string name="pref_section_backups_title">Backups</string>
    <string name="pref_section_backups_summary">Set up automatic backups to a location of your choosing or enable participation in Android\'s cloud backup system.</string>
    <string name="pref_section_icon_packs">Icon packs</string>
    <string name="pref_section_icon_packs_summary">Manage and import icon packs</string>
    <string name="pref_select_theme_title">Theme</string>
    <string name="pref_dynamic_colors_title">Dynamic colors</string>
    <string name="pref_dynamic_colors_summary">Apply an overlay based on the colors of your Android theme</string>
    <string name="pref_view_mode_title">View mode</string>
    <string name="pref_lang_title">Language</string>
    <string name="pref_show_icons_title">Show icons</string>
    <string name="pref_show_icons_summary">Display icons next to each entry</string>
    <string name="pref_code_group_size_title">Code digit grouping</string>
    <string name="pref_code_group_size_summary">Select number of digits to group codes by</string>
    <string name="pref_account_name_position_title">Show the account name</string>
    <string name="pref_show_next_code_title">Show next code</string>
    <string name="pref_show_next_code_summary">Generate and show the next code ahead of time</string>
    <string name="pref_expiration_state_title">Indicate when codes are about to expire</string>
    <string name="pref_expiration_state_summary">Change the color of the codes and have them blink when they are about to expire</string>
    <string name="pref_expiration_state_fallback">Change the color of the codes when they are about to expire</string>
    <string name="pref_shared_issuer_account_name_title">Only show account name when necessary</string>
    <string name="pref_import_file_title">Import from file</string>
    <string name="pref_import_file_summary">Import tokens from a file</string>
    <string name="pref_android_backups_title">Android cloud backups</string>
    <string name="pref_android_backups_summary">Allow Android\'s cloud backup system to include Aegis\' vault in its backups. This is only supported for encrypted vaults.</string>
    <string name="pref_backups_title">Automatically back up the vault</string>
    <string name="pref_backups_summary">Automatically create backups of the vault on external storage when changes are made. This is only supported for encrypted vaults.</string>
    <string name="pref_backups_versioning_strategy_keep_x_versions">Keep a number of versions</string>
    <string name="pref_backups_versioning_strategy_single_backup">Single backup</string>
    <string name="pref_backups_versioning_strategy_single_backup_warning">The selected backup strategy is not reliable and not recommended. A single backup failure could lead to losing your only backup.</string>
    <string name="pref_backups_location_title">Backup location</string>
    <string name="pref_backups_location_summary">Backups will be stored at</string>
    <string name="pref_backups_trigger_title">Trigger backup</string>
    <string name="pref_backups_trigger_summary">Manually trigger a backup</string>
    <string name="pref_backups_versions_title">Number of versions to keep</string>
    <string name="pref_import_app_title">Import from app</string>
    <string name="pref_import_app_summary">Import tokens from an app (requires root access)</string>
    <string name="pref_export_title">Export</string>
    <string name="pref_export_summary">Export the vault</string>
    <string name="pref_password_reminder_title">Password reminder</string>
    <string name="pref_google_auth_export_title">Export for Google Authenticator</string>
    <string name="pref_google_auth_export_descriptor">Generates export QR codes compatible with Google Authenticator</string>
    <string name="pref_password_reminder_summary">Show a %s reminder to enter the password, so that you don\'t forget it.</string>
    <string name="pref_secure_screen_title">Screen security</string>
    <string name="pref_secure_screen_summary">Block screenshots and other attempts to capture the screen within the app</string>
    <string name="pref_tap_to_reveal_title">Tap to reveal</string>
    <string name="pref_tap_to_reveal_summary">Tokens will be hidden by default. Tap on the tokens to reveal code.</string>
    <string name="pref_tap_to_reveal_time_title">Timeout for tap to reveal</string>
    <string name="pref_auto_lock_title">Auto lock</string>
    <string name="pref_auto_lock_summary">When %s</string>
    <string name="pref_backup_password_category">Backup &amp; Export</string>
    <string name="pref_backup_password_title">Separate password for backup &amp; export</string>
    <string name="pref_backup_password_summary">If enabled, the password that is used to unlock the app can\'t be used to decrypt backups and exports anymore.</string>
    <string name="pref_backup_password_change_title">Change password for backup &amp; export</string>
    <string name="pref_backup_password_change_summary">Set a new password that\'ll be used to encrypt the vault during backup and export.</string>
    <string name="pref_encryption_title">Encryption</string>
    <string name="pref_encryption_summary">Encrypt the vault and unlock it with a password or biometrics</string>
    <string name="pref_biometrics_title">Biometric unlock</string>
    <string name="pref_biometrics_summary">Allow biometric authentication to unlock the vault</string>
    <string name="pref_set_password_title">Change password</string>
    <string name="pref_set_password_summary">Set a new password which you will need to unlock your vault</string>
    <string name="export_encrypted">Encrypt the vault</string>
    <string name="export_help">This action will export the vault out of Aegis\' internal storage. Select the format you\'d like your export to be in:</string>
    <string name="export_warning_unencrypted">You are about to export an unencrypted copy of your Aegis vault. <b>This is not recommended</b>.</string>
    <string name="understand_risk_accept">I understand the risk</string>
    <string name="export_format_hint">Export format</string>
    <string name="choose_authentication_method">Security</string>
    <string name="authentication_method_explanation">Aegis is a security-focused 2FA app. Tokens are stored in a vault, that can optionally be encrypted with a password of your choosing. If an attacker obtains your encrypted vault file, they will not be able to access the contents without knowing the password.\n\nWe\'ve preselected the option that we think would fit best for your device.</string>
    <string name="authentication_method_none">None</string>
    <string name="authentication_method_none_description">No password is needed to unlock the vault and it will not be encrypted. <b>This option is not recommended</b>.</string>
    <string name="authentication_method_password">Password</string>
    <string name="authentication_method_password_description">A password is needed to unlock the vault.</string>
    <string name="authentication_method_biometrics">Biometrics</string>
    <string name="authentication_method_biometrics_description">In addition to a password, biometrics registered on this device, like a fingerprint or your face, can be used to unlock the vault.</string>
    <string name="copy">Copy</string>
    <string name="edit">Edit</string>
    <string name="select_all">Select all</string>
    <string name="assign_icons">Assign icons</string>
    <string name="assign_groups">Assign to group</string>
    <string name="favorite" comment="Verb">Favorite</string>
    <string name="lock">Lock</string>
    <string name="preference_manage_groups">Edit groups</string>
    <string name="preference_manage_groups_summary">Manage and delete your groups here</string>
    <string name="pref_highlight_entry_title">Highlight tokens when tapped</string>
    <string name="pref_highlight_entry_summary">Make tokens easier to distinguish from each other by temporarily highlighting them when tapped</string>
    <string name="pref_pause_entry_title">Freeze tokens when tapped</string>
    <string name="pref_pause_entry_summary">Pause automatic refresh of tokens by tapping them. Tokens will not update as long as they are focused. Requires \"Highlight tokens when tapped\" or \"Tap to reveal\".</string>
    <string name="pref_pin_keyboard_title">Use PIN keyboard on lockscreen</string>
    <string name="pref_pin_keyboard_summary">Enable this if you want to enable the PIN keyboard on the lockscreen. This only works for numeric passwords</string>
    <string name="pref_panic_trigger_title">Delete vault on panic trigger</string>
    <string name="pref_panic_trigger_summary">Delete vault when a panic trigger is received from Ripple</string>
    <string name="pref_tap_actions_title">Tap actions</string>
    <string name="pref_single_tap_action_title">Single tap</string>
    <string name="pref_double_tap_action_title">Double tap</string>
    <string name="pref_reserve_first_tap_title">Reserve first tap for reveal</string>
    <string name="pref_reserve_first_tap_summary">When codes are hidden or a highlight is needed, the first tap only reveals/highlights</string>
    <string name="pref_tap_actions_hint_title">Tip</string>
    <string name="pref_tap_actions_hint_summary">To perform an action without revealing hidden codes, assign it to Double tap.</string>
</resources>