<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/pref_tap_actions_title">

    <Preference
        android:defaultValue="false"
        android:key="pref_single_tap_action"
        android:title="@string/pref_single_tap_action_title"
        app:iconSpaceReserved="false"/>

    <Preference
        android:defaultValue="false"
        android:key="pref_double_tap_action"
        android:title="@string/pref_double_tap_action_title"
        app:iconSpaceReserved="false"/>

    <androidx.preference.SwitchPreferenceCompat
        android:key="pref_reserve_first_tap"
        android:title="@string/pref_reserve_first_tap_title"
        android:summary="@string/pref_reserve_first_tap_summary"
        android:defaultValue="false"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="pref_tap_actions_hint"
        android:title="@string/pref_tap_actions_hint_title"
        android:summary="@string/pref_tap_actions_hint_summary"
        android:selectable="false"
        app:iconSpaceReserved="false" />
</PreferenceScreen>