<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_toggle_favorite"
        android:orderInCategory="70"
        android:icon="@drawable/ic_outline_star_24"
        android:title="@string/favorite"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_copy"
        android:orderInCategory="80"
        android:icon="@drawable/ic_outline_content_copy_24"
        android:title="@string/copy"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_edit"
        android:orderInCategory="90"
        android:icon="@drawable/ic_outline_edit_24"
        android:title="@string/edit"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_select_all"
        android:title="@string/select_all"
        android:orderInCategory="95"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_assign_icons"
        android:title="@string/assign_icons"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_assign_groups"
        android:title="@string/assign_groups"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_share_qr"
        android:title="@string/action_transfer"
        android:orderInCategory="110"
        android:icon="@drawable/ic_outline_qr_code_2_24"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:orderInCategory="400"
        android:icon="@drawable/ic_outline_delete_24"
        app:showAsAction="ifRoom"/>
</menu>