<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_authentication_method"
            android:textAlignment="center"
            android:textSize="24sp"
            android:layout_marginTop="30dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/authentication_method_explanation"/>

            <RadioGroup
                android:id="@+id/rg_authenticationMethod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">

                <RadioButton
                    android:id="@+id/rb_none"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/authentication_method_none"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="-5dp"
                    android:text="@string/authentication_method_none_description" />

                <RadioButton
                    android:id="@+id/rb_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/authentication_method_password"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="-5dp"
                    android:text="@string/authentication_method_password_description" />

                <RadioButton
                    android:id="@+id/rb_biometrics"
                    android:enabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/authentication_method_biometrics"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/text_rb_biometrics"
                    android:enabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="-5dp"

                    android:text="@string/authentication_method_biometrics_description" />

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>