<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.beemdevelopment.aegis.com.impy.aegis.ui.MainActivity">
    <item
        android:id="@+id/action_lock"
        android:icon="@drawable/ic_lock"
        app:showAsAction="ifRoom"
        android:title="@string/lock"/>
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_baseline_filter_list_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/filter">
        <menu>
            <group
                android:id="@+id/action_filter_group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_filter_all"
                    android:title="@string/all"
                    android:checked="true" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
